work-around incompatibility with kdevelop tab-indentation and kate's dynamical tab-replacement

when the user has not selected "tabs" or "tabs & spaces" in kate's
indentation settings, but did configure his kdevelop source formatter
to use tabs, then kate would "dynamically" replace these tabs with
spaces again...

this depends on the recent commit to katepart (backported to 4.8 also).

for people with an older kate, please configure your kate editor to
use the above mentioned indentation setting. alternatively try out
kdevelop's 'override kate indentation mode' setting.

BUG: 291074